converted to doxer markup.
Mon Jan 23 22:55:15 2006  Tim Janik  <timj@gtk.org>

        * docs/faq.doxi: converted to doxer markup.

svn path=/trunk/; revision=3419

--- a/web/Makefile
+++ b/web/Makefile
@@ -55,6 +55,8 @@ html/%.html: %.doxi
 	doxer doxi2html $< -o html/
 html/%.phtml: %.doxi
 	doxer doxi2html $< -o html/ -e .phtml
+html/%.html: ../docs/%.doxi
+	doxer doxi2html $< -o html/
 
 style-files: target-dirs
 	cp -a style/* html/style/
