converted to doxer markup.
Mon Jan 23 23:33:52 2006  Tim Janik  <timj@gtk.org>

        * web/documentation.doxi: converted to doxer markup.

        * docs/faq.doxi: minor fixups.

svn path=/trunk/; revision=3420

--- a/web/Makefile
+++ b/web/Makefile
@@ -33,6 +33,7 @@ HTML_TARGETS = $(strip			\
 	html/sound-upload.phtml		\
 	\
 	html/faq.html			\
+	html/quickstart.html		\
 )
 ${HTML_TARGETS}: webmenu.doxi beastdefs.doxi
 
