converted to doxer markup.
Sat Jan 28 17:34:59 2006  Tim Janik  <timj@gtk.org>

        * web/wiki.doxi: converted to doxer markup.

        * web/webmenu.doxi:
        * web/search.doxi: correctly indicate search domain in the google
        search result list.

svn path=/trunk/; revision=3424

--- a/web/Makefile
+++ b/web/Makefile
@@ -34,6 +34,7 @@ HTML_TARGETS = $(strip			\
 	html/screenshots.phtml		\
 	html/sound-browser.phtml	\
 	html/sound-upload.phtml		\
+	html/wiki.phtml			\
 	\
 	html/faq.html			\
 	html/quickstart.html		\
@@ -43,7 +44,6 @@ HTML_TARGETS = $(strip			\
 	html/sfidl.1.html		\
 )
 unportet_targets = $(strip	\
-	wiki.php		\
 	log-beast.html		\
 	log-bse.html		\
 	log-plugins.html	\
