generate docs/images/Makefile.
Tue Jan 31 02:36:17 2006  Tim Janik  <timj@gtk.org>

        * configure.in: generate docs/images/Makefile.

        * docs/Makefile.am: adapt to recent file renames/moves.

        * docs/images/Makefile.am: ship documentation images.

        * web/*.doxi:
        * docs/*.doxi: fixed includes. fixed URIs to be @top_webdir/ relative.

        * web/beastdefs.doxi: provide @top_webdir and @top_styledir macros,
        based on the TOP_WEBDIR definition passed in from Makefile.

        * web/rdocu-template.doxi:
        * web/doxer-docu.doxi:
        * web/Makefile:
        generate doxer docu. generate GXK source code documentation.

svn path=/trunk/; revision=3436

--- a/configure.in
+++ b/configure.in
@@ -635,6 +635,7 @@ data/sfi.pc
 data/bse.pc
 data/beast.applications
 docs/Makefile
+docs/images/Makefile
 docs/generated/Makefile
 po/Makefile.in
 po-helper.sh
